@@ -831,6 +831,8 @@ mb_wm_decor_button_press_handler (XButtonEvent    *xev,
 	  mb_wm_theme_paint_button (wm->theme, button);
 	}
 
+      mb_wm_object_signal_emit(button, MBWMDecorButtonSignalPressed);
+
       if (button->press_activated)
 	{
 	  XUngrabPointer(wm->xdpy, CurrentTime);
@@ -884,7 +886,7 @@ mb_wm_decor_button_press_handler (XButtonEvent    *xev,
 		   * the events here.
 		   */
 		  if (!button->realized) {
-		    mb_wm_object_unref (MB_WM_OBJECT(button)); 
+		    mb_wm_object_unref (MB_WM_OBJECT(button));
 		    return False;
 		  }
 
@@ -955,6 +957,9 @@ mb_wm_decor_button_press_handler (XButtonEvent    *xev,
 				retval = False;
 				goto done;
 			      }
+
+			    mb_wm_object_signal_emit(button,
+			        MBWMDecorButtonSignalReleased);
 
 			    if (button->release)
 			      button->release(wm, button, button->userdata);
@@ -1106,7 +1111,7 @@ mb_wm_decor_button_destroy (MBWMObject* obj)
    * We are doing the job in the mb_wm_decor_button_unrealize() while the
    * decoration still exists.
    */
-  
+
 }
 
 static void
@@ -1152,7 +1157,7 @@ mb_wm_decor_button_unrealize (MBWMDecorButton *button)
       button->themedata = NULL;
       button->destroy_themedata = NULL;
     }
-  
+
   button->realized = False;
 }
 
