@@ -212,6 +212,12 @@ struct MBWMDecorButtonClass
   */
 };
 
+typedef enum
+{
+  MBWMDecorButtonSignalPressed = 1,
+  MBWMDecorButtonSignalReleased = 2,
+} MBWMDecorButtonSignal;
+
 int
 mb_wm_decor_button_class_type (void);
 
